<resources>
    <string name="app_name">Mobi-Net</string>
    <string name="Helvetica">fonts/Helvetica.ttf</string>
    <string name="Helvetica_Bold">fonts/Helvetica-Bold.ttf</string>
    <string name="Helvetica_light">fonts/Helvetica-light.ttf</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="mess_error_data">Error</string>
    <string name="assign">Assign</string>
    <string name="accept">Accept</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="error_mac_address">New MAC address is blank!</string>
    <string name="dialog_employee_choose_employee">Choose Employee \"%1$s\'</string>
    <string name="confirm">Confirm</string>
    <string name="result">Result</string>
    <string name="want_to_delete_session">Do you want to delete this session?</string>
    <string name="dialog_employee_id">ID</string>
    <string name="dialog_employee_code">Code</string>
    <string name="dialog_employee_name">Name</string>
    <string name="additional">Additional</string>
    <string name="mess_success_data">Successfully</string>
    <string name="login_user_name">User name</string>
    <string name="login_empty_user_name">User name is not null.</string>
    <string name="login_empty_password">Password is not null.</string>
    <string name="login_password">Password</string>
    <string name="update">Update</string>
    <string name="mess_update_contract">Do you want to update this contract?</string>
    <string name="empty">…</string>
    <string name="hint_new_mac">Enter new MAC address</string>
    <string name="hint_new_pass">Enter new password</string>
    <string name="hint_date">dd-MM-yyyy</string>
    <string name="process_data">Loading data, please wait…</string>
    <string name="mess_assigned_user">This device is assigned to user \"%1$s\"</string>
    <string name="login">Login</string>
    <string name="login_show_password">Show password</string>
    <string name="mess_error_not_active">This device is not activated, contact your manager to active it.</string>
    <string name="mess_miss_permission">Please, provide access to the application!</string>
    <string name="mess_close_app">Do you want to close this application?</string>
    <string name="mess_log_out_user">Do you want to logout?</string>
    <string name="functions">Functions</string>
    <string name="menu_deployment">Deployment List</string>
    <string name="menu_maintenance">Maintenance List</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_port_net">Port Net</string>
    <string name="menu_report">Reports</string>
    <string name="menu_info">Info</string>
    <string name="search_list_checkListType">Checklist Type</string>
    <string name="search_list_serviceType">Service Type</string>
    <string name="search_list_fromDate">From Date</string>
    <string name="search_list_toDate">To Date</string>
    <string name="search_list_view">View</string>
    <string name="type_contract_adsl">ADSL</string>
    <string name="type_contract_ftth">FTTH</string>
    <string name="type_contract_normal">Normal</string>
    <string name="type_contract_system">System</string>
    <string name="info_contract">Info Contract</string>
    <string name="title_search_list_deployment">Search Deployment Info</string>
    <string name="title_search_list_maintenance">Search Maintenance Info</string>
    <string name="date_time_format">%1$s-%2$s-%3$s</string>
    <string name="error_date">\"From date\" must be in or before the \"To date\".</string>
    <string name="remaining_contract">Remaining Contract</string>
    <string name="vip_contract">VIP Contract</string>
    <string name="coming_contract">Coming Contract</string>
    <string name="late_contract">Late Contract</string>
    <string name="view_survey">View Survey</string>
    <string name="hi_open_net">Hi-Opennet Contract</string>
    <string name="item_result_contract">Contract</string>
    <string name="item_result_create_date">Create date</string>
    <string name="item_result_assign_date">Assign date</string>
    <string name="item_result_service_type">Service type</string>
    <string name="item_result_priority">Priority</string>
    <string name="item_result_remain_hour">Remain hour</string>
    <string name="item_result_customer">Customer</string>
    <string name="item_result_total_checklist">Total checklist</string>
    <string name="item_result_total_checklist_in_month">Total checklist in month</string>
    <string name="key_detail_contract_contact">contact</string>
    <string name="key_detail_contract_fullname">fullname</string>
    <string name="key_detail_contract_accessname">accessname</string>
    <string name="key_detail_contract_address">address</string>
    <string name="key_detail_contract_servicetype">servicetype</string>
    <string name="key_detail_contract_assigndate">assigndate</string>
    <string name="key_detail_contract_macaddress">macaddress</string>
    <string name="key_detail_contract_area">area</string>
    <string name="key_detail_contract_createat">createat</string>
    <string name="key_detail_contract_createby">createby</string>
    <string name="key_detail_contract_image">image</string>
    <string name="key_detail_contract_cusnote">cusnote</string>
    <string name="key_detail_contract_id_main">idmain</string>
    <string name="key_detail_contract_name">name</string>
    <string name="key_detail_contract_odc_cable_type">odccabletype</string>
    <string name="key_detail_contract_date">date</string>
    <string name="key_detail_contract_description">description</string>
    <string name="key_detail_contract_total_checklist">totalchecklist</string>
    <string name="key_detail_contract_init_desc">initdesc</string>
    <string name="key_detail_contract_location_phone">locationphone</string>
    <string name="key_detail_contract_id_cable">idcable</string>
    <string name="key_detail_contract_od_cable">odcable</string>
    <string name="key_detail_contract_first_status">firststatus</string>
    <string name="value_detail_contract_fullname">Full name</string>
    <string name="value_detail_contract_address">Address</string>
    <string name="value_detail_contract_accessname">Access name</string>
    <string name="value_detail_contract_assigndate">Assign date</string>
    <string name="value_detail_contract_contract">Contact</string>
    <string name="value_detail_contract_macaddress">MAC address</string>
    <string name="value_detail_contract_servicetype">Service Type</string>
    <string name="value_detail_contract_area">Area</string>
    <string name="value_detail_contract_createat">Create at</string>
    <string name="value_detail_contract_createby">Create by</string>
    <string name="value_detail_contract_image">Survey</string>
    <string name="value_detail_contract_cusnote">Cus Note</string>
    <string name="value_detail_contract_access_name">Access name</string>
    <string name="value_detail_contract_phone">Phone</string>
    <string name="value_detail_contract_odc_cable">ODC Cable</string>
    <string name="value_detail_contract_first_status">First status</string>
    <string name="value_detail_contract_cable_outdoor">Cable outdoor</string>
    <string name="value_detail_contract_cable_indoor">Cable indoor</string>
    <string name="value_detail_contract_call_note">Call note</string>
    <string name="caller_id">CallerID</string>
    <string name="value_detail_contract_checklist">Checklist</string>
    <string name="value_detail_contract_description">Description</string>
    <string name="not_found_contract">Not found any contract!</string>
    <string name="url_get_image">http://storeglobal.kh.net/Images%1$s.gif</string>
    <string name="update_contract">Update Deployment Contract</string>
    <string name="update_contract_maintenance">Update Maintenance Contract</string>
    <string name="mess_exit_update_contract">Do you want to close update contract?</string>
    <string name="no_value">0</string>
    <string name="step_update">%1$d/%2$d</string>
    <string name="type_cable_05_mm">0.5 mm</string>
    <string name="type_cable_1FO">1FO</string>
    <string name="type_cable_2FO">2FO</string>
    <string name="type_cable_4FO">4FO</string>
    <string name="type_cable_cable5">Cable5</string>
    <string name="type_cable_fo_1">FO 1 core</string>
    <string name="type_cable_fo_2">FO 2 core</string>
    <string name="type_cable_fo_4">FO 4 core</string>
    <string name="type_cable_fo_8">FO 8 core</string>
    <string name="type_cable_fo_16">FO 16 core</string>
    <string name="type_cable_utf_cat5">UTF Cat5</string>
    <string name="type_cable_other_cable">Other cable</string>
    <string name="type_router_rb750">RB750</string>
    <string name="type_router_n302r">N302R</string>
    <string name="type_router_wr741nd">TL-WR741ND</string>
    <string name="item_modem_not_get_modem">Not get modem</string>
    <string name="item_modem_rent_modem">Rent modem</string>
    <string name="item_modem_gift_modem">Gift modem</string>
    <string name="item_modem_sale_modem">Sale modem</string>
    <string name="type_modem_not_modem">Not modem</string>
    <string name="type_modem_wifi">Wifi</string>
    <string name="type_modem_4port">4 port</string>
    <string name="type_modem_adsl2">ADSL2+ wifi 4P</string>
    <string name="type_modem_ftth">FTTH</string>
    <string name="type_modem_ftth_wifi">FTTH Wifi</string>
    <string name="type_modem_na">N/A</string>
    <string name="reason_delay_waiting">Waiting infrastructure</string>
    <string name="reason_delay_customer_delay">Customer delay</string>
    <string name="reason_delay_over_cable">Over cable length</string>
    <string name="reason_delay_hung_up">Hung up not sign</string>
    <string name="reason_delay_customer_transfer">Customer transfer delay</string>
    <string name="reason_delay_must_install">Must install underground</string>
    <string name="reason_delay_survey_error">Survey error grouppoints</string>
    <string name="reason_delay_over_ring">Over ring</string>
    <string name="reason_delay_group_point">Group points empty cable</string>
    <string name="reason_delay_lack_of_equipment">Lack of equipment</string>
    <string name="reason_delay_clash_various">Clash various electricity line</string>
    <string name="item_stb_not_get_stb">Not get STB</string>
    <string name="item_stb_rent_stb">Rent STB</string>
    <string name="item_stb_gif_stb">Gif STB</string>
    <string name="item_stb_sale_stb">Sale STB</string>
    <string name="type_stb_not_stb">Not STB</string>
    <string name="type_stb_coship">Coship</string>
    <string name="type_stb_comtrend">Comtrend</string>
    <string name="result_processing">Processing</string>
    <string name="result_complete">Complete process</string>
    <string name="update_indoor">Indoor/(m)</string>
    <string name="update_outdoor">Outdoor/(m)</string>
    <string name="update_router_amount">Router/Amount</string>
    <string name="update_rj11">RJ11</string>
    <string name="update_wire">Wire</string>
    <string name="update_mang_xoong">Mangxoong 01 FO</string>
    <string name="update_button">Button</string>
    <string name="update_jumper">Jumper Wire</string>
    <string name="update_onu">ONU</string>
    <string name="update_box_ftth">Box FTTH</string>
    <string name="update_tie_wire">Tie Wire M6</string>
    <string name="contract">Contract</string>
    <string name="user_name">User name</string>
    <string name="kill_session_date">Date</string>
    <string name="kill_session_name">Name</string>
    <string name="kill_session_nas_name">Nas Name</string>
    <string name="kill_session_ip_address">Ip Address</string>
    <string name="kill_session_mac_address">Mac Address</string>
    <string name="kill_session_delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="status">Status</string>
</resources>