<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="horizontal"
        android:padding="@dimen/_16dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/contract"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragReset_tvContract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_16dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/user_name"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragReset_tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>
</LinearLayout>