<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/contract"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvContract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/user_name"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/value_detail_contract_fullname"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/status"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/kill_session_ip_address"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvIpAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/kill_session_mac_address"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragResetMac_tvMacAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/empty"
            android:textColor="@color/blueMain"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/fragResetMac_etNewMacAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:background="@drawable/shape_border_deep_orange_text_view"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hint_new_mac"
        android:padding="@dimen/_8dp"
        android:textColor="@color/blueMain"
        fontPath="@string/Helvetica_Bold"
        android:textSize="@dimen/_17dp"/>

    <TextView
        android:id="@+id/fragResetMac_tvSubmit"
        fontPath="@string/Helvetica_Bold"
        android:layout_width="@dimen/_180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/selector_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_20dp"/>

</LinearLayout>