<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_dialog_while"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/fragDialogEmployee_tvTitle"
        fontPath="@string/Helvetica_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_8dp"
        android:textColor="@color/redMain"
        android:textSize="@dimen/_15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_300"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/dialog_employee_id"
            android:textColor="@color/white"
            android:textSize="@dimen/_15dp"/>

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/dialog_employee_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_15dp"/>

        <TextView
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dialog_employee_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_15dp"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragDialogEmployee_rvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>